# haskell-formatter

./: .boring  .gitignore  .hlint.yaml  .travis.yml  HLint.hs  LICENSE  Main.hs  Makefile  README.md  README.rst  build.sh  format.sh  haskell-formatter.cabal  package.yaml  stack.yaml
src/: Main.hs
src/Evolutics/: AttachedComment.hs  Formatter.hs  Formatting.hs  SourceTree.hs  Tools.hs
src/Evolutics/Annotated/: Traversable.hs
src/Evolutics/Code/: Abstract.hs  Comment.hs  Concrete.hs  ConcreteCommented.hs  ConcreteCommentless.hs  Core.hs  Location.hs  Locations.hs  Merged.hs  Shifting.hs  Source.hs
src/Evolutics/Code/Abstract/: Abstract.hs
src/Evolutics/Code/Concrete/: Commented.hs  Commentless.hs
src/Evolutics/Tools/: Core.hs  Functions.hs  HalfZippable.hs  Lists.hs  MyTraversable.hs  Newlines.hs  SourceLocations.hs  Splitting.hs
src/Evolutics/Transformations/: CommentAssignment.hs  CommentFormatting.hs  CommentIntegration.hs  ElementArrangement.hs
src/executable/: Main.hs
src/executable/Evolutics/Tools/: FileStreams.hs
testsuite/: Main.hs
testsuite/Evolutics/Tools/: DirectoryData.hs  FileTests.hs  MapTree.hs
testsuite/resources/examples/: default_style.yaml
testsuite/resources/source/comments/depends_on_displacement/multiple_annotations/: Output.hs
testsuite/resources/source/comments/depends_on_displacement/single_annotation/line_pair/after_after/: Input.hs  Output.hs
testsuite/resources/source/comments/depends_on_displacement/single_annotation/line_pair/after_before/: Input.hs  Output.hs
testsuite/resources/source/comments/depends_on_displacement/single_annotation/line_pair/after_none/: Input.hs  Output.hs
testsuite/resources/source/comments/depends_on_displacement/single_annotation/line_pair/before_after/: Input.hs  Output.hs
testsuite/resources/source/comments/depends_on_displacement/single_annotation/line_pair/before_before/: Input.hs  Output.hs
testsuite/resources/source/comments/depends_on_displacement/single_annotation/line_pair/before_none/: Input.hs  Output.hs
testsuite/resources/source/comments/depends_on_displacement/single_annotation/line_pair/none_after/: Input.hs  Output.hs
testsuite/resources/source/comments/depends_on_displacement/single_annotation/line_pair/none_before/: Input.hs  Output.hs
testsuite/resources/source/comments/depends_on_displacement/single_annotation/line_pair/none_none/: Input.hs  Output.hs
testsuite/resources/source/comments/depends_on_displacement/single_annotation/single_line/after/: Input.hs  Output.hs
testsuite/resources/source/comments/depends_on_displacement/single_annotation/single_line/before/: Input.hs  Output.hs
testsuite/resources/source/comments/depends_on_displacement/single_annotation/single_line/none/: Input.hs  Output.hs
testsuite/resources/source/comments/empty_lines/between_comments_of_different_declarations/merges_consecutive_empty_lines/: Input.hs
testsuite/resources/source/comments/empty_lines/between_comments_of_different_elements/keeps_single_empty_line/: Input.hs
testsuite/resources/source/comments/indentation/inherits_indentation_of_merged_line/actual_code_between_start_and_commented/: Input.hs
testsuite/resources/source/comments/indentation/inherits_indentation_of_merged_line/basic/: Input.hs  Output.hs
testsuite/resources/source/comments/indentation/inherits_indentation_of_merged_line/elements_between_start_and_commented/: Output.hs
testsuite/resources/source/comments/indentation/inherits_indentation_of_merged_line/indented_start/: Input.hs  Output.hs
testsuite/resources/source/comments/indentation/keeps_indentation_with_separate_line/: Input.hs  Output.hs
testsuite/resources/source/comments/keeps_comment_at_end_of_file/: Input.hs
testsuite/resources/source/comments/keeps_comments_at_bounds_of_file/end/: Output.hs
testsuite/resources/source/comments/keeps_comments_at_bounds_of_file/start/: Output.hs
testsuite/resources/source/comments/treats_nested_comments/: Input.hs  Output.hs
testsuite/resources/source/handles_infix_binding/: Input.hs
testsuite/resources/source/handles_optional_parentheses/class_constraints/with/: Input.hs  Output.hs
testsuite/resources/source/handles_optional_parentheses/class_constraints/without/: Input.hs  Output.hs
testsuite/resources/source/handles_optional_parentheses/class_inheritance/with/: Input.hs
testsuite/resources/source/handles_optional_parentheses/class_inheritance/without/: Output.hs
testsuite/resources/source/handles_optional_parentheses/instances/with/: Output.hs
testsuite/resources/source/handles_optional_parentheses/instances/without/: Output.hs
testsuite/resources/source/handles_options_ghc_pragma/: Input.hs
testsuite/resources/source/issues/escapes_non_ASCII_characters_for_arrangement/: Input.hs
testsuite/resources/source/issues/escapes_non_ASCII_characters_to_format_actual_code/: Output.hs
testsuite/resources/source/issues/starts_top_level_function_without_empty_line_if_no_signature/: Output.hs
testsuite/resources/source/literals/does_not_escape_characters/: Input.hs
testsuite/resources/source/orders_parts/import_declarations/: Input.hs  Output.hs
testsuite/resources/source/orders_parts/import_declarations_and_entities/: Input.hs  Output.hs
testsuite/resources/source/orders_parts/import_entities_before_declarations/: Input.hs  Output.hs
testsuite/resources/source/orders_parts/nested_import_entities/: Input.hs  Output.hs
testsuite/resources/source/orders_parts/nested_import_entities_before_root_entities/: Input.hs  Output.hs
testsuite/resources/source/orders_parts/root_import_entities/: Input.hs  Output.hs
testsuite/resources/source/terminates_file_with_newline/: Output.hs
testsuite/src/: Main.hs
testsuite/src/Evolutics/Tools/: DirectoryData.hs  FileTests.hs
testsuite/src/Language/Haskell/Formatter/: Tests.hs
testsuite/src/Language/Haskell/Formatter/Internal/: Tests.hs
testsuite/src/Language/Haskell/Formatter/Toolkit/: DirectoryData.hs  FileTesting.hs  FileTree.hs  MapTree.hs  TestTool.hs
utilities/: DependencyCheck.hs  Makefile
(+18 files in other folders)
