name:                  haskell-formatter
version:               1.0.0
synopsis:              Haskell source code formatter
homepage:              https://github.com/evolutics/haskell-formatter
bug-reports:           https://github.com/evolutics/haskell-formatter/issues
license:               GPL-3
license-file:          LICENSE
author:                Benjamin Fischer
maintainer:            Benjamin Fischer <benjamin.fischer@evolutics.info>
copyright:             (C) 2014–2015 Benjamin Fischer
category:              Development
build-type:            Simple
cabal-version:         >= 1.8

description:
  The Haskell Formatter formats Haskell source code. It is strict in that it
  fundamentally rearranges code.

extra-source-files:
  .gitignore
  HLint.hs
  Makefile
  README.rst
  testsuite/resources/examples/default_style.yaml

extra-tmp-files:
  README.xhtml

library
  exposed-modules:
    Language.Haskell.Formatter,
    Language.Haskell.Formatter.Internal.MapTree,
    Language.Haskell.Formatter.Internal.Newline,
    Language.Haskell.Formatter.Internal.StyleFileFormat,
    Language.Haskell.Formatter.Internal.TreeFormat

  other-modules:
    Language.Haskell.Formatter.CommentCore,
    Language.Haskell.Formatter.Configuration,
    Language.Haskell.Formatter.Error,
    Language.Haskell.Formatter.ExactCode,
    Language.Haskell.Formatter.Location,
    Language.Haskell.Formatter.Main,
    Language.Haskell.Formatter.Process.AttachComments,
    Language.Haskell.Formatter.Process.Code,
    Language.Haskell.Formatter.Process.CodeOrdering,
    Language.Haskell.Formatter.Process.Control,
    Language.Haskell.Formatter.Process.DetachComments,
    Language.Haskell.Formatter.Process.FormatActualCode,
    Language.Haskell.Formatter.Process.FormatComments,
    Language.Haskell.Formatter.Process.Formatter,
    Language.Haskell.Formatter.Process.LineTool,
    Language.Haskell.Formatter.Process.Note,
    Language.Haskell.Formatter.Result,
    Language.Haskell.Formatter.Source,
    Language.Haskell.Formatter.Style,
    Language.Haskell.Formatter.Toolkit.ListTool,
    Language.Haskell.Formatter.Toolkit.Splitter,
    Language.Haskell.Formatter.Toolkit.StreamName,
    Language.Haskell.Formatter.Toolkit.Visit

  build-depends:
    base >= 4.6 && < 4.8,
    containers >= 0.5,
    haskell-src-exts == 1.16.*,
    scientific >= 0.3,
    text >= 1.0,
    unordered-containers >= 0.2,
    yaml >= 0.8

  hs-source-dirs:
    src/library

  ghc-options:         -Wall

executable haskell-formatter
  main-is:             Main.hs

  build-depends:
    base >= 4.6 && < 4.8,
    directory >= 1.2,
    filepath >= 1.3,
    haskell-formatter,
    optparse-applicative >= 0.10

  hs-source-dirs:
    src/executable

  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs

  other-modules:
    Language.Haskell.Formatter.Internal.Tests,
    Language.Haskell.Formatter.Tests,
    Language.Haskell.Formatter.Toolkit.FileTesting,
    Language.Haskell.Formatter.Toolkit.FileTree,
    Language.Haskell.Formatter.Toolkit.TestTool

  build-depends:
    base >= 4.6 && < 4.8,
    containers >= 0.5,
    directory-tree >= 0.11,
    doctest >= 0.9,
    filemanip >= 0.3,
    filepath >= 1.3,
    haskell-formatter,
    hlint >= 1.9,
    tasty >= 0.9,
    tasty-hunit >= 0.8

  hs-source-dirs:
    testsuite/src

  ghc-options:         -Wall

source-repository head
  type:                git
  location:            https://github.com/evolutics/haskell-formatter.git
